--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Node modules
+rgpv-cse-helper/node_modules/
 backend/node_modules/
 frontend/node_modules/
 
@@ -11,3 +12,4 @@ frontend/.env
 
 # Build
 frontend/dist/
+
