--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,13 +1,13 @@
 {
-  "name":"frontend",
+  "name": "frontend",
   "version": "0.1.0",
-  "private":"true",
+  "private": "true",
   "dependencies": {
     "axios": "^1.12.1",
-    "react":"19.1.1",
-    "react-scripts":"5.0.1",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-router-dom": "^7.9.1",
-    "react-dom": "19.1.1"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,7 +33,6 @@
       "last 1 safari version"
     ]
   },
-  
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
