--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "concurrently": "^9.2.1"
   },
   "scripts": {
-    "dev": "concurrently \"npm run dev --prefix backend\" \"npm run dev --prefix frontend\""
+  "start": "concurrently \"npm run backend\" \"npm run frontend\"",
+  "backend": "cd backend && npm start",
+  "frontend": "cd frontend && npm start"
 }
 }
 
